App interface added

--- a/In-app coding patterns/app/src/main/res/values/strings.xml
+++ b/In-app coding patterns/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Android kit</string>
+    <string name="info">Learn about In-app coding patterns</string>
+    <string name="text_builder">1. Builder pattern</string>
+    <string name="text_factory">2. Factory pattern</string>
+    <string name="text_command">3. Command pattern</string>
 </resources>
